syntax = "proto3";
package Messenger.Identity.App.Grpc.Contracts;
import "protobuf-net/bcl.proto"; // schema for protobuf-net's handling of core .NET types

message AuthenticateUserRequest {
   string Email = 1;
   string Password = 2;
}
message AuthenticateUserResponse {
   string AccessToken = 1;
   string RefreshToken = 2;
   .bcl.DateTime DueDate = 3;
   int64 UserId = 4;
}
service IdentityApp {
   rpc AuthenticateUser (AuthenticateUserRequest) returns (AuthenticateUserResponse);
}
